FAQ is fixed and button alignment is also fixed

--- a/src/app/components/FAQItem/_faqitem.scss
+++ b/src/app/components/FAQItem/_faqitem.scss
@@ -27,10 +27,7 @@
   font-size: 20px;
   /* no rotation */
 
-  @include breakpoint(mobile-lg) {
-    margin-right: 15px;
-    // margin-top: 10px;
-  }
+ 
 }
 
 .faq-answer {
